Other color schemes and fix spacing between courses' cards

--- a/src/sass/_courses.sass
+++ b/src/sass/_courses.sass
@@ -7,7 +7,9 @@ $course-card-border: solid 1px #dddddd
 .courses
   padding: 0 70px
 
-.course
+li.course
+  padding-bottom: 42px
+
   // Scheme colors
   &.scheme-1 .title
     background: #FEDD59
@@ -17,6 +19,14 @@ $course-card-border: solid 1px #dddddd
     background: #54C5FF
     .subtitle
       color: #437E9B
+  &.scheme-3 .title
+    background: #FF926A
+    .subtitle
+      color: #B06449
+  &.scheme-4 .title
+    background: #A893FF
+    .subtitle
+      color: #7567B4
 
   .title
     @include side-radius(top)
@@ -49,4 +59,4 @@ $course-card-border: solid 1px #dddddd
         &:nth-child(6)
           border-bottom: 0
       td
-        height: $course-card-events-height/6
+        height: $course-card-events-height/6 - 1
